--- a/water-level-monitoring-subsystem/platformio.ini
+++ b/water-level-monitoring-subsystem/platformio.ini
@@ -12,3 +12,11 @@
 platform = espressif32
 board = esp32-s3-devkitm-1
 framework = arduino
+monitor_speed = 115200
+build_flags = 
+   -DARDUINO_USB_MODE=1
+   -DARDUINO_USB_CDC_ON_BOOT=1
+lib_deps =
+  knolleary/PubSubClient @ ^2.8
+  bblanchon/ArduinoJson @ ^7.0.3
+  
